.archive/kubernetes/apps/drone/drone/drone/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/target: "gw.${SECRET_PUBLIC_DOMAIN}"
    external-dns/is-public: "true"
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: drone
  name: drone
  namespace: drone
spec:
  ingressClassName: traefik
  rules:
    - host: drone.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: drone
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - drone.${SECRET_PUBLIC_DOMAIN}
      secretName: tls.drone
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: drone
  name: drone-internal
  namespace: drone
spec:
  ingressClassName: traefik
  rules:
    - host: drone.${SECRET_INTERNAL_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: drone
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - drone.${SECRET_INTERNAL_DOMAIN}
